--- a/test.css
+++ b/test.css
@@ -2,3 +2,8 @@
     color:pink!important;
     font-size:90px!important;
 }
+
+#mytest {
+    color:pink!important;
+    font-size:90px!important;
+}
