--- a/test.css
+++ b/test.css
@@ -6,3 +6,10 @@
 h1.css-xznnej.css-1b4jwf {
     color: pink!important;
 }
+
+.mytest {
+    display: block;
+    height: 300px;
+    width: 300px;
+    background: #000;
+}
