--- a/css/styles.css
+++ b/css/styles.css
@@ -11370,7 +11370,10 @@ header.masthead {
   overflow: hidden;
   padding-top: calc(7rem + 72px);
   padding-bottom: 7rem;
-  background: url(../assets/img/bg.jpg);
+  background-image:
+  linear-gradient(45deg,
+    rgba(255,255,255, 0.20),
+    rgba(0,0,0, 0.50)), url(../assets/img/bg.jpg);
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: scroll;
